# firefly-iii-import

./: .flake8  .gitignore  README.md  config_preset.toml  pyproject.toml  setup.cfg
firefly_iii_import/: __init__.py  cli.py  config.py  firefly.py  importer.py  main.py
firefly_iii_import/importer/: __init__.py  base.py  n26.py
firefly_iii_import/loader/: __init__.py  base.py  n26.py
firefly_iii_test_instance/: .env  .gitignore  docker-compose.yml
