[metadata]
name = firefly-iii-import
version = 0.1
description = Pythonscript for automatic import of transactions from different bankaccounts into Firefly III
long_description = file: README.md

[options]
packages = find:
install_requires =
    Firefly-III-API-Client
    n26
    argparse

[options.packages.find]
include=
    firefly_iii_import*

[options.entry_points]
console_scripts =
    f3i=firefly_iii_import.cli:main

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,scripts
max-line-length = 180
per-file-ignores =
    # imported but unused
    __init__.py: F401